Appears complete with no problems.

--- a/files_created/teamHTML.html
+++ b/files_created/teamHTML.html
@@ -25,13 +25,43 @@
           <div class="p-3 text-center">
               <div class="card text-start">
                   <div class="card-header text-bg-primary">Jared
-                  <p><span class="material-symbols-outlined">engineering</span> Engineer</p>
+                  <p><span class="material-symbols-outlined">coffee</span> Manager</p>
                   </div>
                       <div class="card-header">
                           <ul class="list-group list-group-flush">
                               <li class="list-group-item">ID: 1</li>
                               <li class="list-group-item">Email: <a href="mailto:test@test.com">test@test.com</a></li>
-                              <li class="list-group-item">Github: <a href="https://github.com/1" target="_blank">1</a></li>
+                              <li class="list-group-item">Office number: 1</li>
+                          </ul>
+                      </div>
+              </div>
+          </div>
+          
+          <div class="p-3 text-center">
+              <div class="card text-start">
+                  <div class="card-header text-bg-primary">Scott
+                  <p><span class="material-symbols-outlined">engineering</span> Engineer</p>
+                  </div>
+                      <div class="card-header">
+                          <ul class="list-group list-group-flush">
+                              <li class="list-group-item">ID: 2</li>
+                              <li class="list-group-item">Email: <a href="mailto:Manager@test.com">Manager@test.com</a></li>
+                              <li class="list-group-item">Github: <a href="https://github.com/Scott-Gauthier" target="_blank">Scott-Gauthier</a></li>
+                          </ul>
+                      </div>
+              </div>
+          </div>
+          
+          <div class="p-3 text-center">
+              <div class="card text-start">
+                  <div class="card-header text-bg-primary">Tim
+                  <p><span class="material-symbols-outlined">school</span> Intern</p>
+                  </div>
+                      <div class="card-header">
+                          <ul class="list-group list-group-flush">
+                              <li class="list-group-item">ID: 3</li>
+                              <li class="list-group-item">Email: <a href="mailto:Intern@test.com">Intern@test.com</a></li>
+                              <li class="list-group-item">School: Not University of Oregon</li>
                           </ul>
                       </div>
               </div>
